Clearfix footer; Description, image en hashtag bij het maken van een sessie; complexe validatie bij een hashtag, mag enkel als geen wachtwoord ingesteld; fix: z-index van navigatiebalk; zorgen dat images geupload worden op een veilige plaats

--- a/public/css/customize_semantic.css
+++ b/public/css/customize_semantic.css
@@ -24,7 +24,7 @@
 	border-radius: 0 !important;
 	position: fixed;
 	width: 100%;
-	z-index: 1;
+	z-index: 10;
 }
 
 #navigation_margin {
@@ -71,4 +71,7 @@ footer p {
 
 #footer_margin {
 	height: 5em;
+	content: "";
+	display: table;
+	clear: both;
 }
